--- a/Dataaccess/Dataaccess.csproj
+++ b/Dataaccess/Dataaccess.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountExtension.cs" />
     <Compile Include="Migrations\201910051353325_CreateDatabase.cs" />
     <Compile Include="Migrations\201910051353325_CreateDatabase.Designer.cs">
       <DependentUpon>201910051353325_CreateDatabase.cs</DependentUpon>
@@ -59,6 +60,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyLinhKienDBContext.cs" />
+    <Compile Include="Staff\StaffDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
