update StaffDAL, StaffBLL

--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -49,10 +49,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Staff\StaffBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dataaccess\Dataaccess.csproj">
+      <Project>{e00b66a3-c2e9-47fd-a658-8c731a4cb205}</Project>
+      <Name>Dataaccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{078b0672-2c3f-4210-adb9-9bce9d5b1dc5}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
