--- a/Dataaccess/Dataaccess.csproj
+++ b/Dataaccess/Dataaccess.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyLinhKienDBContext.cs" />
+    <Compile Include="Staff\IStaffDAL.cs" />
     <Compile Include="Staff\StaffDAL.cs" />
   </ItemGroup>
   <ItemGroup>
