--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accessory\AccessoryBLL.cs" />
+    <Compile Include="Customer\CustomerBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Staff\StaffBLL.cs" />
   </ItemGroup>
