--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Accessory.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="DTO\Customer\CustomerCreateDto.cs" />
     <Compile Include="DTO\Staff\StaffCreateDto.cs" />
     <Compile Include="Enum\ERole.cs" />
     <Compile Include="Order.cs" />
