update form frmStaffManager update Staff Service

--- a/Dataaccess/Dataaccess.csproj
+++ b/Dataaccess/Dataaccess.csproj
@@ -103,5 +103,8 @@
       <Name>Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Images\StaffAvatar\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
