--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -60,7 +60,8 @@
     <Compile Include="Category.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="DTO\Customer\CustomerCreateDto.cs" />
-    <Compile Include="DTO\Staff\StaffCreateDto.cs" />
+    <Compile Include="DTO\Staff\StaffCreatingDto.cs" />
+    <Compile Include="DTO\Staff\StaffGettingDto.cs" />
     <Compile Include="Enum\ERole.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderDetail.cs" />
