--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -67,6 +67,7 @@
     <Compile Include="OrderDetail.cs" />
     <Compile Include="Producer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Result\Result.cs" />
     <Compile Include="Staff.cs" />
   </ItemGroup>
   <ItemGroup>
