--- a/Dataaccess/Dataaccess.csproj
+++ b/Dataaccess/Dataaccess.csproj
@@ -77,6 +77,14 @@
     <Compile Include="Migrations\201910150118317_addAvatar.Designer.cs">
       <DependentUpon>201910150118317_addAvatar.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910220331193_removeRole.cs" />
+    <Compile Include="Migrations\201910220331193_removeRole.Designer.cs">
+      <DependentUpon>201910220331193_removeRole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910220333342_addRole.cs" />
+    <Compile Include="Migrations\201910220333342_addRole.Designer.cs">
+      <DependentUpon>201910220333342_addRole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyLinhKienDBContext.cs" />
@@ -100,8 +108,15 @@
     <EmbeddedResource Include="Migrations\201910150118317_addAvatar.resx">
       <DependentUpon>201910150118317_addAvatar.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910220331193_removeRole.resx">
+      <DependentUpon>201910220331193_removeRole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910220333342_addRole.resx">
+      <DependentUpon>201910220333342_addRole.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Images\AccessoryAvatar\" />
     <Folder Include="Images\StaffAvatar\" />
   </ItemGroup>
   <ItemGroup>
