--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Accessory.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="DTO\Accessory\AccessoryCreatingDTO.cs" />
+    <Compile Include="DTO\Accessory\AccessoryGettingDTO.cs" />
     <Compile Include="DTO\Customer\CustomerCreateDto.cs" />
     <Compile Include="DTO\Staff\StaffCreatingDto.cs" />
     <Compile Include="DTO\Staff\StaffGettingDto.cs" />
