--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -57,7 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accessory\AccessoryBLL.cs" />
+    <Compile Include="Category\CategoryBLL.cs" />
     <Compile Include="Customer\CustomerBLL.cs" />
+    <Compile Include="OrderDetail\OrderDetailBLL.cs" />
+    <Compile Include="Order\OrderBLL.cs" />
+    <Compile Include="Producer\ProducerBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Staff\StaffBLL.cs" />
   </ItemGroup>
@@ -75,5 +79,6 @@
       <Name>Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
