--- a/Dataaccess/Dataaccess.csproj
+++ b/Dataaccess/Dataaccess.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
@@ -59,6 +61,8 @@
     <Compile Include="Accessory\AccessoryDAL.cs" />
     <Compile Include="Accessory\IAccessoryDAL.cs" />
     <Compile Include="AccountExtension.cs" />
+    <Compile Include="Category\CategoryDAL.cs" />
+    <Compile Include="Category\ICategoryDAL.cs" />
     <Compile Include="Customer\CustomerDAL.cs" />
     <Compile Include="Customer\ICustomerDAL.cs" />
     <Compile Include="Migrations\201910051353325_CreateDatabase.cs" />
@@ -89,7 +93,17 @@
     <Compile Include="Migrations\201910302045429_updateProducer.Designer.cs">
       <DependentUpon>201910302045429_updateProducer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911010454099_updateAccessory1.cs" />
+    <Compile Include="Migrations\201911010454099_updateAccessory1.Designer.cs">
+      <DependentUpon>201911010454099_updateAccessory1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="OrderDetail\IOrderDetailDAL.cs" />
+    <Compile Include="OrderDetail\OrderDetailDAL.cs" />
+    <Compile Include="Order\IOrderDAL.cs" />
+    <Compile Include="Order\OrderDAL.cs" />
+    <Compile Include="Producer\IProducerDAL.cs" />
+    <Compile Include="Producer\ProducerDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyLinhKienDBContext.cs" />
     <Compile Include="Staff\IStaffDAL.cs" />
@@ -120,6 +134,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201910302045429_updateProducer.resx">
       <DependentUpon>201910302045429_updateProducer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911010454099_updateAccessory1.resx">
+      <DependentUpon>201911010454099_updateAccessory1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
