--- a/QUANLYLINHKIEN_PTUD/QUANLYLINHKIEN_PTUD.csproj
+++ b/QUANLYLINHKIEN_PTUD/QUANLYLINHKIEN_PTUD.csproj
@@ -44,6 +44,7 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -64,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Control\ComboBoxItem.cs" />
     <Compile Include="frmAccessories.cs">
       <SubType>Form</SubType>
     </Compile>
