--- a/QUANLYLINHKIEN_PTUD/QUANLYLINHKIEN_PTUD.csproj
+++ b/QUANLYLINHKIEN_PTUD/QUANLYLINHKIEN_PTUD.csproj
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
-    </Reference>
     <Reference Include="Bunifu_UI_v1.52">
       <HintPath>..\..\..\..\..\..\Projects\C#\Library UI\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
@@ -233,13 +230,13 @@
     <None Include="imgs\icon_menu.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Business\Business.csproj">
+      <Project>{04578299-b024-469e-ae4e-b90260a81391}</Project>
+      <Name>Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{078b0672-2c3f-4210-adb9-9bce9d5b1dc5}</Project>
       <Name>Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="C:\Users\soi\Downloads\New folder\New folder\PTUD_QUANLYLINHKIEN_UI\Business\Business.csproj">
-      <Project>{f1e73211-1417-4366-861f-d7e5b49029f0}</Project>
-      <Name>Business</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
