--- a/Model/packages.config
+++ b/Model/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net45" />
+  <package id="iTextSharp-LGPL" version="4.1.6" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
