--- a/Dataaccess/Dataaccess.csproj
+++ b/Dataaccess/Dataaccess.csproj
@@ -41,6 +41,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.1, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13.1\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -103,11 +106,16 @@
     <Compile Include="Migrations\201911190953117_updateStatus.Designer.cs">
       <DependentUpon>201911190953117_updateStatus.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911261721250_addAddressToCustomer.cs" />
+    <Compile Include="Migrations\201911261721250_addAddressToCustomer.Designer.cs">
+      <DependentUpon>201911261721250_addAddressToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="OrderDetail\IOrderDetailDAL.cs" />
     <Compile Include="OrderDetail\OrderDetailDAL.cs" />
     <Compile Include="Order\IOrderDAL.cs" />
     <Compile Include="Order\OrderDAL.cs" />
+    <Compile Include="PDFCreateExtention.cs" />
     <Compile Include="Producer\IProducerDAL.cs" />
     <Compile Include="Producer\ProducerDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -314,6 +322,9 @@
     <EmbeddedResource Include="Migrations\201911190953117_updateStatus.resx">
       <DependentUpon>201911190953117_updateStatus.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911261721250_addAddressToCustomer.resx">
+      <DependentUpon>201911261721250_addAddressToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Model\Model.csproj">
@@ -324,6 +335,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="OrderPDF\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
