--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -60,11 +60,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accessory.cs" />
-    <Compile Include="BillCreatePDF.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="DTO\Accessory\AccessoryCreatingDTO.cs" />
     <Compile Include="DTO\Accessory\AccessoryGettingDTO.cs" />
+    <Compile Include="DTO\PDF\AccessoryPDFCreatingDTO.cs" />
+    <Compile Include="DTO\PDF\OrderPDFCreatingDTO.cs" />
     <Compile Include="DTO\Customer\CustomerCreateDto.cs" />
     <Compile Include="DTO\OrderDetail\OrderDetail.cs" />
     <Compile Include="DTO\Staff\StaffCreatingDto.cs" />
@@ -79,7 +80,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Font\Roboto-Black.ttf" />
+    <None Include="Font\Roboto-BlackItalic.ttf" />
+    <None Include="Font\Roboto-Bold.ttf" />
+    <None Include="Font\Roboto-BoldItalic.ttf" />
+    <None Include="Font\Roboto-Italic.ttf" />
+    <None Include="Font\Roboto-Light.ttf" />
+    <None Include="Font\Roboto-LightItalic.ttf" />
+    <None Include="Font\Roboto-Medium.ttf" />
+    <None Include="Font\Roboto-MediumItalic.ttf" />
+    <None Include="Font\Roboto-Regular.ttf" />
+    <None Include="Font\Roboto-Thin.ttf" />
+    <None Include="Font\Roboto-ThinItalic.ttf" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="OrderPDF\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
